rename related functions & comments
